--- a/Hackathon-UI/package.json
+++ b/Hackathon-UI/package.json
@@ -10,18 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.45.2",
+    "dom": "^0.0.3",
     "dotenv": "^16.4.5",
+    "generative-ai": "^0.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.1",
     "react-toaster": "^0.0.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
